コミット漏れ

--- a/src/main/resources/templates/withdrawal.html
+++ b/src/main/resources/templates/withdrawal.html
@@ -43,7 +43,7 @@
 			本当に退会してしまいますか？<br>
 			この操作は取り消せません！！
 		</h1>
-		<form th:action="@{/web/user/withdrawal}" method="post" class="button_form"> 
+		<form th:action="@{/web/withdrawal}" method="post" class="button_form"> 
 			<input type="submit" class="button" value="退会する" />
 		</form>
 	<body>
