テスト・デバッグ1

--- a/src/main/resources/templates/insert/create_group.html
+++ b/src/main/resources/templates/insert/create_group.html
@@ -1,4 +1,4 @@
-<th:block th:fragment="group_details(CreateGroup)">
+<th:block th:fragment="create_group(CreateGroup)">
 	<th:block>
 		<h2>グループ作成</h2>
 		
