--- a/src/main/resources/templates/insert/insert_dialogue.html
+++ b/src/main/resources/templates/insert/insert_dialogue.html
@@ -1,4 +1,4 @@
-<th:block th:fragment="group_details(InsertUser)">
+<th:block th:fragment="insert_dialogue(InsertUser)">
 	<th:block>
 		<h2>友達追加</h2>
 		
