--- a/src/main/resources/templates/talkRoom/desire_group.html
+++ b/src/main/resources/templates/talkRoom/desire_group.html
@@ -1,4 +1,4 @@
-<th:block th:fragment="dialogue(ContentModel, InsertTalkForm)">
+<th:block th:fragment="desire_group(ContentModel, InsertTalkForm)">
 	<th:block th:object="${ContentModel}">
 		<script>
 			$("div#talk_list_next").click(function(event) {
