--- a/src/main/resources/templates/example.html
+++ b/src/main/resources/templates/example.html
@@ -88,8 +88,8 @@
 						</div>
 						<div class="see_side_title">
 							<div class="hamburger-menu">
-								<input id="ac-check_have_user" class="ac-check" type="checkbox">
-								<label class="ac-label" for="ac-check_have_user">
+								<input id="ac-check_have_group" class="ac-check" type="checkbox">
+								<label class="ac-label" for="ac-check_have_group">
 									グループ一覧<div class="notice" th:if="*{allNoticeCountInGroupList} != 0" 
 												th:text="*{allNoticeCountInGroupList}"></div>
 								</label>
@@ -108,16 +108,16 @@
 						</div>
 						<div class="see_side_title">
 							<div class="hamburger-menu">
-								<input id="ac-check_have_user" class="ac-check" type="checkbox">
-								<label class="ac-label" for="ac-check_have_user">
+								<input id="ac-check_desire_have_user" class="ac-check" type="checkbox">
+								<label class="ac-label" for="ac-check_desire_have_user">
 									友達になれそうな一覧<div class="notice" th:if="*{desireHaveUserCount} != 0"
 														th:text="*{desireHaveUserCount}"></div>
 								</label>
 								<th:block th:each="list : *{desireHaveUserList}" th:object="${list}">
 									<div class="ac-content"
-										th:attr="data-href=@{/web/desire/dialogue/{haveUserIdName}(haveUserIdName = *{userIdName})}">
+										th:attr="data-href=@{/web/desire/dialogue/{haveUserIdName}(haveUserIdName = *{haveUserIdName})}">
 										<li><div class="see_side_content">
-											<div th:text="*{userName}"></div>
+											<div th:text="*{haveUserName}"></div>
 										</div></li>
 									</div>
 								</th:block>
@@ -125,8 +125,8 @@
 						</div>
 						<div class="see_side_title">
 							<div class="hamburger-menu">
-								<input id="ac-check_have_user" class="ac-check" type="checkbox">
-								<label class="ac-label" for="ac-check_have_user">
+								<input id="ac-check_desire_have_group" class="ac-check" type="checkbox">
+								<label class="ac-label" for="ac-check_desire_have_group">
 									誘われているグループ一覧<div class="notice" th:if="*{desireGroupCount} != 0"
 															th:text="*{desireGroupCount}"></div>
 								</label>
