--- a/src/main/resources/templates/dialogue/dialogue_talk_get.html
+++ b/src/main/resources/templates/dialogue/dialogue_talk_get.html
@@ -4,7 +4,7 @@
 		
 		<div class="chat_send_message_box">
 			<form th:action="@{/web/dialogue/talk/update/{haveUserIdName}/{talkIndex}(haveUserIdName=*{haveUserIdName}, talkIndex=*{talkIndex})}" method="post" th:object="${UpdateTalkForm}"> 
-				<div><textarea cols="50" rows="5" name="talkContent" th:field="*{talkContent}"></textarea></div> <div th:if="${#fields.hasErrors('talkContent')}" th:errors="*{talkContent}" />
+				<div><textarea cols="50" rows="5" name="talkContent" th:field="*{talkContent}"></textarea></div> <div class="validation_message" th:if="${#fields.hasErrors('talkContent')}" th:errors="*{talkContent}" />
 				<input type="submit" class="button" value="変更" />
 				<input type="submit" class="delete_button" value="削除" form="delete_form"/>
 			</form>
