--- a/src/main/resources/templates/insert/insert_dialogue.html
+++ b/src/main/resources/templates/insert/insert_dialogue.html
@@ -3,7 +3,7 @@
 		<h2>友達追加</h2>
 		
 		<form th:action="@{/web/insert/dialogue}" method="post" th:object="${InsertUser}"> 
-			<div>ユーザーID名：<input type="text" name="userIdName" th:field="*{userIdName}"/></div> <div th:if="${#fields.hasErrors('userIdName')}" th:errors="*{userIdName}" /><br>
+			<div>ユーザーID名：<input type="text" name="userIdName" th:field="*{userIdName}"/></div> <div class="validation_message" th:if="${#fields.hasErrors('userIdName')}" th:errors="*{userIdName}" /><br>
 			<input type="submit" class="button" value="登録" />
 		</form>
 		
