--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,11 +12,11 @@
 		<h1>チャット♪</h1>
 		<h2>ユーザーの新規作成</h2>
 		<form th:action="@{/web/signup}" method="post" action="#" th:object="${SignupForm}">
-			<div>ユーザー名：<input type="text" name="userName" th:field="*{userName}"/></div> <div th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" /><br>
-			<div>ユーザーID名：<input type="text" name="userIdName" th:field="*{userIdName}"/></div> <div th:if="${#fields.hasErrors('userIdName')}" th:errors="*{userIdName}" /><br>
-			<div th:if="${#fields.hasErrors('notMatchesPassword')}" th:field="*{notMatchesPassword}" th:errors="*{notMatchesPassword}"></div>
-			<div>パスワード：<input type="password" name="password" th:field="*{password}"/></div> <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" /><br>
-			<div>パスワード（もう一度）：<input type="password" name="oneMorePassword" th:field="*{oneMorePassword}"/></div> <div th:if="${#fields.hasErrors('oneMorePassword')}" th:errors="*{oneMorePassword}" /><br>
+			<div>ユーザー名：<input type="text" name="userName" th:field="*{userName}"/></div> <div class="validation_message" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" /><br>
+			<div>ユーザーID名：<input type="text" name="userIdName" th:field="*{userIdName}"/></div> <div class="validation_message" th:if="${#fields.hasErrors('userIdName')}" th:errors="*{userIdName}" /><br>
+			<div class="validation_message" th:if="${#fields.hasErrors('notMatchesPassword')}" th:field="*{notMatchesPassword}" th:errors="*{notMatchesPassword}"></div>
+			<div>パスワード：<input type="password" name="password" th:field="*{password}"/></div> <div class="validation_message" th:if="${#fields.hasErrors('password')}" th:errors="*{password}" /><br>
+			<div>パスワード（もう一度）：<input type="password" name="oneMorePassword" th:field="*{oneMorePassword}"/></div> <div class="validation_message" th:if="${#fields.hasErrors('oneMorePassword')}" th:errors="*{oneMorePassword}" /><br>
 			<p><input type="submit" value="ユーザー登録" class="button" /></p>
 		</form>
 	</body>
