グループ詳細ページと友達詳細ページのデバッグ

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -286,3 +286,23 @@ input[type="password"]:focus{
 a{
 	color:#00ff00;
 }
+
+
+/*//////////////////////
+//
+// 共通・バリデーションチェックのメッセージ
+//
+///////////////////////*/
+.validation_message{
+	color: #ff0000;
+}
+
+
+/*//////////////////////
+//
+// 共通・表
+//
+///////////////////////*/
+td{
+	color: #ffffff;
+}
