友達申請が出されている人のトークページ周りの実装完了・適宜変更

--- a/src/main/resources/templates/talkRoom/dialogue_talk_list_fragment.html
+++ b/src/main/resources/templates/talkRoom/dialogue_talk_list_fragment.html
@@ -14,7 +14,7 @@
 				th:if="! *{isMyTalk}">
 				
 				<div class="chat_message_other_sender" th:text="*{senderUserName}">	</div>
-				<div class="chat_message_text_me" th:text="*{talkContent}">	</div>
+				<div class="chat_message_text_other" th:text="*{talkContent}">	</div>
 				<div class="chat_message_date" th:text="*{dateString}">	</div>
 			</div>
 			
