--- a/src/main/resources/templates/talkRoom/desire_dialogue.html
+++ b/src/main/resources/templates/talkRoom/desire_dialogue.html
@@ -24,7 +24,7 @@
 				<div id="talk_list_back"
 					onclick="load_talk_list_back()"
 					th:attr="
-						ajax-href=@{/load/desire/dialogue/{haveUserIdName}/back(haveUserIdName=*{haveUserIdName})}
+						ajax-href=@{/load/desire/dialogue/{haveUserIdName}/back(haveUserIdName=*{haveUserIdName})},
 						ajax-index=*{firstIndex} - 1">
 						
 					<div class="talk_list_back_load talk_list_load">&#8679;</div>
@@ -34,7 +34,7 @@
 						th:if="! *{isMyTalk}">
 						
 						<div class="chat_message_other_sender" th:text="*{senderUserName}">	</div>
-						<div class="chat_message_text_me" th:text="*{talkContent}">	</div>
+						<div class="chat_message_text_other" th:text="*{talkContent}">	</div>
 						<div class="chat_message_date" th:text="*{dateString}">	</div>
 					</div>
 					
@@ -49,7 +49,7 @@
 				<div id="talk_list_next"
 					onclick="load_talk_list_next()"
 					th:attr="
-						ajax-href=@{/load/desire/dialogue/{haveUserIdName}/next(haveUserIdName=*{haveUserIdName})}
+						ajax-href=@{/load/desire/dialogue/{haveUserIdName}/next(haveUserIdName=*{haveUserIdName})},
 						ajax-index=*{finalIndex} + 1">
 						
 					<div class="talk_list_next_load talk_list_load">&#8681;</div>
