--- a/src/main/resources/templates/talkRoom/desire_group_talk_list_fragment.html
+++ b/src/main/resources/templates/talkRoom/desire_group_talk_list_fragment.html
@@ -4,7 +4,7 @@
 			th:if="*{firstIndex} != null"
 			onclick="load_talk_list_back()"
 			th:attr="
-				ajax-href=@{/load/desire/group/{groupTalkRoomId}/back(groupTalkRoomId=*{groupTalkRoomId})}
+				ajax-href=@{/load/desire/group/{groupTalkRoomId}/back(groupTalkRoomId=*{groupTalkRoomId})},
 				ajax-index=*{firstIndex} - 1">
 				
 			<div class="talk_list_back_load talk_list_load">&#8679;</div>
@@ -14,7 +14,7 @@
 				th:if="! *{isMyTalk}">
 				
 				<div class="chat_message_other_sender" th:text="*{senderUserName}">	</div>
-				<div class="chat_message_text_me" th:text="*{talkContent}">	</div>
+				<div class="chat_message_text_other" th:text="*{talkContent}">	</div>
 				<div class="chat_message_date" th:text="*{dateString}">	</div>
 			</div>
 			
@@ -29,7 +29,7 @@
 			th:if="*{finalIndex} != null"
 			onclick="load_talk_list_next()"
 			th:attr="
-				ajax-href=@{/load/desire/group/{groupTalkRoomId}/next(groupTalkRoomId=*{groupTalkRoomId})}
+				ajax-href=@{/load/desire/group/{groupTalkRoomId}/next(groupTalkRoomId=*{groupTalkRoomId})},
 				ajax-index=*{finalIndex} + 1">
 				
 			<div class="talk_list_next_load talk_list_load">&#8681;</div>
