--- a/src/main/resources/templates/talkRoom/group.html
+++ b/src/main/resources/templates/talkRoom/group.html
@@ -15,7 +15,7 @@
 				<div id="talk_list_back"
 					onclick="load_talk_list_back()"
 					th:attr="
-						ajax-href=@{/load/group/{groupTalkRoomId}/back(groupTalkRoomId=*{groupTalkRoomId})}
+						ajax-href=@{/load/group/{groupTalkRoomId}/back(groupTalkRoomId=*{groupTalkRoomId})},
 						ajax-index=*{firstIndex} - 1">
 						
 					<div class="talk_list_back_load talk_list_load">&#8679;</div>
@@ -25,7 +25,7 @@
 						th:if="! *{isMyTalk}">
 						
 						<div class="chat_message_other_sender" th:text="*{senderUserName}">	</div>
-						<div class="chat_message_text_me" th:text="*{talkContent}">	</div>
+						<div class="chat_message_text_other" th:text="*{talkContent}">	</div>
 						<div class="chat_message_date" th:text="*{dateString}">	</div>
 					</div>
 					
@@ -40,7 +40,7 @@
 				<div id="talk_list_next"
 					onclick="load_talk_list_next()"
 					th:attr="
-						ajax-href=@{/load/group/{groupTalkRoomId}/next(groupTalkRoomId=*{groupTalkRoomId})}
+						ajax-href=@{/load/group/{groupTalkRoomId}/next(groupTalkRoomId=*{groupTalkRoomId})},
 						ajax-index=*{finalIndex} + 1">
 						
 					<div class="talk_list_next_load talk_list_load">&#8681;</div>
